--- a/3d_figures.html
+++ b/3d_figures.html
@@ -14,7 +14,12 @@
         initViewport(gl, canvas);
         initGL(canvas);
         // TO DO: create and draw the figures
-        var dodecahedron = createDodecahedron(gl, [0, 0, -5], [1, 1, 1]);
+        var dodecahedron = createDodecahedron(
+          gl,
+          [0, 0, -5],
+          [0, 1, 0],
+          [-0.4, 1, 0.1]
+        );
         var pyramid = createPyramid(gl, [-5, 0, -5], [0.1, 1, 0.2]);
         var octahedron = createOctahedron(gl, [5, 0, -5], [0, 1, 0]);
         initShader(gl);
